# coverforge-trainer

./: .gitignore  README.md  e2e_cross_validate.py  pyproject.toml  sonar-project.properties
.github/workflows/: sonarqube.yml
schema/: cover-spec.schema.json
src/coverforge_trainer/: __init__.py  _mlx_compat.py  config.py  cover_spec.py  infer.py  teacher.py  train.py
tests/: test_config.py  test_cover_spec.py  test_coverage_extras.py  test_infer.py  test_mlx_compat.py  test_schema_sync.py  test_synthesize.py  test_teacher.py  test_train.py
