[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coverforge-trainer"
version = "0.1.0"
description = "MLX LoRA trainer for the CoverSpec cover-rendering contract"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic>=2.7",
  "jsonschema>=4.21",
  "mlx-lm>=0.31,<0.32",
  "mlx>=0.22",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "pyright>=1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/coverforge_trainer/cover_spec.py" = ["N815"]
"tests/*" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=src/coverforge_trainer --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/coverforge_trainer"]
branch = true

[tool.coverage.report]
fail_under = 90

[tool.pyright]
include = ["src/coverforge_trainer"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
